--- a/templates/main.html
+++ b/templates/main.html
@@ -13,34 +13,35 @@
 </html><html lang="'ru">
 <head>
 </head>
-<title>Рассчитайте цену Вашей квартиры</title>
+<title></title>
 
 <body>
 
-    <h1>Рассчитайте цену Вашей квартиры</h1>
+    <h1 align="center">Рассчитайте цену Вашей квартиры</h1>
 
 <div>
-  <form action="{{url_for('predict')}}" method="POST">
+  <form style='border: 2px solid #37ff00;width:50%;margin:0 auto;text-align:center;font-family: Helvetica'
+          action="{{url_for('predict')}}" method="POST">
     <label for="Total_area">Общая площадь</label>
-    <input type="float" id="Total_area" name="Total_area">btw:[0-999]
+    <input type="float" id="Total_area" name="Total_area" size ="15">btw:[0-999]
     <br>
     <label for="Kitchen_area">Площадь кухни</label>
-    <input type="float" id="Kitchen_area" name="Kitchen_area">btw:[0-999]
+    <input type="float" id="Kitchen_area" name="Kitchen_area" size ="15">btw:[0-999]
     <br>
     <label for="Living_area">Жилая площадь</label>
-    <input type="float" id="Living_area" name="Living_area">btw:[0-999]
+    <input type="float" id="Living_area" name="Living_area" size ="15">btw:[0-999]
     <br>
     <label for="House_age">Возраст дома</label>
-    <input type="float" id="House_age" name="House_age">btw:[0-999]
+    <input type="float" id="House_age" name="House_age" size ="15">btw:[0-999]
     <br>
     <label for="Time_to_metro">Время до метро (мин)</label>
-    <input type="float" id="Time_to_metro" name="Time_to_metro">btw:[0-999]
+    <input type="float" id="Time_to_metro" name="Time_to_metro" size ="15">btw:[0-999]
     <br>
     <label for="Total_floors">Всего этажей в доме</label>
-    <input type="float" id="Total_floors" name="Total_floors">btw:[0-999]
+    <input type="float" id="Total_floors" name="Total_floors" size ="15">btw:[0-999]
     <br>
     <label for="Floor">Этаж</label>
-    <input type="float" id="Floor" name="Floor">btw:[0-999]
+    <input type="float" id="Floor" name="Floor" size ="15">btw:[0-999]
     <br>
     <label for="N_rooms">Количество комнат</label>
     <select id="N_rooms" name="N_rooms">
@@ -52,7 +53,7 @@
     </select>
     <br>
     <label for="Repairs">Ремонт</label>
-    <select id="Repairs" name="Repairs">
+    <select id="Repairs" name="Repairs" >
       <option value=" евро"> евро</option>
       <option value=" дизайнерский"> дизайнерский</option>
       <option value=" косметический"> косметический</option>
@@ -60,7 +61,7 @@
     </select>
     <br>
     <label for="House_type">Тип дома</label>
-    <select id="House_type" name="House_type">
+    <select id="House_type" name="House_type" >
       <option value=" панельный"> панельный</option>
       <option value=" монолитно-кирпичный"> монолитно-кирпичный</option>
       <option value=" монолитный"> монолитный</option>
@@ -90,6 +91,7 @@
       <option value="Свердловское">Свердловское</option>
       <option value="Курортный">Курортный</option>
     </select>
+    <br>
     <br>
     <button type = 'submit'>Ориентировочная цена</button>
   </form>
