--- a/templates/main.html
+++ b/templates/main.html
@@ -1,102 +1,128 @@
 <!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+<html lang="ru">
 
-</body>
-</html><html lang="'ru">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+  <title>My project</title>
 </head>
-<title></title>
 
 <body>
+  <h1 class="header">Рассчитайте цену Вашей квартиры</h1>
 
-    <h1 style="text-align: center;font-family: Tahoma">Рассчитайте цену Вашей квартиры</h1>
+  <div class="container">
+    <form class="main-form" action="{{url_for('predict')}}" method="POST">
+      <div class="form-item">
+        <label for="Total_area">Общая площадь</label>
+        <input type="float" id="Total_area" name="Total_area" size="15" required>
+        <p class="btw">btw:[0-999]</p>
+      </div>
 
-<div>
-  <form style='border: 2px solid #37ff00;width:50%;margin:0 auto;text-align:center;font-family: Tahoma '
-          action="{{url_for('predict')}}" method="POST">
-    <label for="Total_area">Общая площадь</label>
-    <input type="float" id="Total_area" name="Total_area" size ="15" required>btw:[0-999]
-    <br>
-    <label for="Kitchen_area">Площадь кухни</label>
-    <input type="float" id="Kitchen_area" name="Kitchen_area" size ="15" required>btw:[0-999]
-    <br>
-    <label for="Living_area">Жилая площадь</label>
-    <input type="float" id="Living_area" name="Living_area" size ="15" required>btw:[0-999]
-    <br>
-    <label for="House_age">Возраст дома</label>
-    <input type="float" id="House_age" name="House_age" size ="15" required>btw:[0-999]
-    <br>
-    <label for="Time_to_metro">Время до метро (мин)</label>
-    <input type="float" id="Time_to_metro" name="Time_to_metro" size ="15" required>btw:[0-999]
-    <br>
-    <label for="Total_floors">Всего этажей в доме</label>
-    <input type="float" id="Total_floors" name="Total_floors" size ="15" required>btw:[0-999]
-    <br>
-    <label for="Floor">Этаж</label>
-    <input type="float" id="Floor" name="Floor" size ="15" required>btw:[0-999]
-    <br>
-    <label for="N_rooms">Количество комнат</label>
-    <select id="N_rooms" name="N_rooms" required>
-      <option value=" студия"> студия</option>
-      <option value=" 1"> 1</option>
-      <option value=" 2"> 2</option>
-      <option value=" 3"> 3</option>
-      <option value=" 4"> 4</option>
-    </select>
-    <br>
-    <label for="Repairs">Ремонт</label>
-    <select id="Repairs" name="Repairs" required>
-      <option value=" евро"> евро</option>
-      <option value=" дизайнерский"> дизайнерский</option>
-      <option value=" косметический"> косметический</option>
-      <option value=" требует ремонта"> требует ремонта</option>
-    </select>
-    <br>
-    <label for="House_type">Тип дома</label>
-    <select id="House_type" name="House_type" required>
-      <option value=" панельный"> панельный</option>
-      <option value=" монолитно-кирпичный"> монолитно-кирпичный</option>
-      <option value=" монолитный"> монолитный</option>
-      <option value=" кирпичный"> кирпичный</option>
-      <option value=" блочный"> блочный</option>
-      <option value=" деревянный"> деревянный</option>
-    </select>
-    <br>
-    <label for="District">Район</label>
-    <select id="District" name="District" required>
-      <option value="Калининский">Калининский</option>
-      <option value="Приморский">Приморский</option>
-      <option value="Выборгский">Выборгский</option>
-      <option value="Василеостровский">Василеостровский</option>
-      <option value="Московский">Московский</option>
-      <option value="Невский">Невский</option>
-      <option value="Фрунзенский">Фрунзенский</option>
-      <option value="Кировский">Кировский</option>
-      <option value="Красногвардейский">Красногвардейский</option>
-      <option value="Адмиралтейский">Адмиралтейский</option>
-      <option value="Петроградский">Петроградский</option>
-      <option value="Пушкинский">Пушкинский</option>
-      <option value="Центральный">Центральный</option>
-      <option value="Красносельский">Красносельский</option>
-      <option value="Петродворцовый">Петродворцовый</option>
-      <option value="Колпинский">Колпинский</option>
-      <option value="Свердловское">Свердловское</option>
-      <option value="Курортный">Курортный</option>
-    </select>
-    <br>
-    <br>
-    <button type = 'submit'>Ориентировочная цена</button>
-  </form>
-    <h3 style="text-align: center;font-family: Tahoma ;font-size: xx-large">{{ y_pred }}</h3>
-</div>
-</div>
+      <div class="form-item">
+        <label for="Kitchen_area">Площадь кухни</label>
+        <input type="float" id="Kitchen_area" name="Kitchen_area" size="15" required>
+        <p class="btw">btw:[0-999]</p>
+      </div>
+      <div class="form-item">
+        <label for="Living_area">Жилая площадь</label>
+        <input type="float" id="Living_area" name="Living_area" size="15" required>
+        <p class="btw">btw:[0-999]</p>
+      </div>
+      <div class="form-item">
+        <label for="House_age">Возраст дома</label>
+        <input type="float" id="House_age" name="House_age" size="15" required>
+        <p class="btw">btw:[0-999]</p>
+      </div>
+      <div class="form-item">
+        <label for="Time_to_metro">Время до метро (мин)</label>
+        <input type="float" id="Time_to_metro" name="Time_to_metro" size="15" required>
+        <p class="btw">btw:[0-999]</p>
+      </div>
+      <div class="form-item">
+        <label for="Total_floors">Всего этажей в доме</label>
+        <input type="float" id="Total_floors" name="Total_floors" size="15" required>
+        <p class="btw">btw:[0-999]</p>
+      </div>
+      <div class="form-item">
+        <label for="Floor">Этаж</label>
+        <input type="float" id="Floor" name="Floor" size="15" required>
+        <p class="btw">btw:[0-999]</p>
+      </div>
+
+      <div class="form-item-select">
+        <label class="label-select" for="N_rooms">Количество комнат</label>
+        <select class="select-select" id="N_rooms" name="N_rooms" required>
+          <option value=" студия"> студия</option>
+          <option value=" 1"> 1</option>
+          <option value=" 2"> 2</option>
+          <option value=" 3"> 3</option>
+          <option value=" 4"> 4</option>
+        </select>
+        <p class="select-empty"></p>
+      </div>
+
+      <div class="form-item-select">
+        <label class="label-select" for="Repairs">Ремонт</label>
+        <select class="select-select" id="Repairs" name="Repairs" required>
+          <option value=" евро"> евро</option>
+          <option value=" дизайнерский"> дизайнерский</option>
+          <option value=" косметический"> косметический</option>
+          <option value=" требует ремонта"> требует ремонта</option>
+        </select>
+        <p class="select-empty"></p>
+
+      </div>
+
+      <div class="form-item-select">
+        <label class="label-select" for="House_type">Тип дома</label>
+        <select class="select-select" id="House_type" name="House_type" required>
+          <option value=" панельный"> панельный</option>
+          <option value=" монолитно-кирпичный"> монолитно-кирпичный</option>
+          <option value=" монолитный"> монолитный</option>
+          <option value=" кирпичный"> кирпичный</option>
+          <option value=" блочный"> блочный</option>
+          <option value=" деревянный"> деревянный</option>
+        </select>
+        <p class="select-empty"></p>
+      </div>
+
+      <div class="form-item-select">
+        <label class="label-select" for="District">Район</label>
+        <select class="select-select" id="District" name="District" required>
+          <option value="Калининский">Калининский</option>
+          <option value="Приморский">Приморский</option>
+          <option value="Выборгский">Выборгский</option>
+          <option value="Василеостровский">Василеостровский</option>
+          <option value="Московский">Московский</option>
+          <option value="Невский">Невский</option>
+          <option value="Фрунзенский">Фрунзенский</option>
+          <option value="Кировский">Кировский</option>
+          <option value="Красногвардейский">Красногвардейский</option>
+          <option value="Адмиралтейский">Адмиралтейский</option>
+          <option value="Петроградский">Петроградский</option>
+          <option value="Пушкинский">Пушкинский</option>
+          <option value="Центральный">Центральный</option>
+          <option value="Красносельский">Красносельский</option>
+          <option value="Петродворцовый">Петродворцовый</option>
+          <option value="Колпинский">Колпинский</option>
+          <option value="Свердловское">Свердловское</option>
+          <option value="Курортный">Курортный</option>
+        </select>
+        <p class="select-empty"></p>
+      </div>
+
+      <button class="btn" type='submit'>
+        <p class="btn-text">Ориентировочная цена</p>
+      </button>
+    </form>
+    <h3 class="header-bottom">{{ y_pred }}</h3>
+  </div>
 </body>
+
 </html>
