--- a/templates/main.html
+++ b/templates/main.html
@@ -21,38 +21,38 @@
       <div class="form-item">
         <label for="Total_area">Общая площадь</label>
         <input type="float" id="Total_area" name="Total_area" size="15" required>
-        <p class="btw">btw:[0-999]</p>
+        <p class="btw"></p>
       </div>
 
       <div class="form-item">
         <label for="Kitchen_area">Площадь кухни</label>
         <input type="float" id="Kitchen_area" name="Kitchen_area" size="15" required>
-        <p class="btw">btw:[0-999]</p>
+        <p class="btw"></p>
       </div>
       <div class="form-item">
         <label for="Living_area">Жилая площадь</label>
         <input type="float" id="Living_area" name="Living_area" size="15" required>
-        <p class="btw">btw:[0-999]</p>
+        <p class="btw"></p>
       </div>
       <div class="form-item">
         <label for="House_age">Возраст дома</label>
         <input type="float" id="House_age" name="House_age" size="15" required>
-        <p class="btw">btw:[0-999]</p>
+        <p class="btw"></p>
       </div>
       <div class="form-item">
         <label for="Time_to_metro">Время до метро (мин)</label>
         <input type="float" id="Time_to_metro" name="Time_to_metro" size="15" required>
-        <p class="btw">btw:[0-999]</p>
+        <p class="btw"></p>
       </div>
       <div class="form-item">
         <label for="Total_floors">Всего этажей в доме</label>
         <input type="float" id="Total_floors" name="Total_floors" size="15" required>
-        <p class="btw">btw:[0-999]</p>
+        <p class="btw"></p>
       </div>
       <div class="form-item">
         <label for="Floor">Этаж</label>
         <input type="float" id="Floor" name="Floor" size="15" required>
-        <p class="btw">btw:[0-999]</p>
+        <p class="btw"></p>
       </div>
 
       <div class="form-item-select">
